# emacs-parquet-explorer

./: .gitignore  .gitmodules  README.md  justfile
lisp/: emacs-parquet-explorer-autoloads.el  emacs-parquet-explorer.el
renderer/: Cargo.toml  index.html
renderer/src/: lib.rs
ui/: Cargo.toml  index.html
ui/src/: lib.rs
