[package]
name = "emacs-parquet-explorer-renderer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "generate_sample"
path = "src/bin/generate_sample.rs"

[dependencies]
emacs-egui-sdk = { path = "../../emacs-egui/sdk" }
parquet = { version = "53.0", default-features = false, features = ["arrow", "snap", "flate2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "Response",
    "console",
    "UrlSearchParams"
] }
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = ["glow"] }
console_error_panic_hook = "0.1"
bytes = "1.0"
lazy_static = "1.4"
