[package]
name = "emacs-parquet-explorer-ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "generate_sample"
path = "src/bin/generate_sample.rs"

[[bin]]
name = "parquet_to_csv"
path = "src/bin/parquet_to_csv.rs"

[dependencies]
emacs-egui-sdk = { path = "../deps/emacs-egui/sdk" }
parquet = { version = "53.0", default-features = false, features = ["arrow", "snap", "flate2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = ["glow"] }
bytes = "1.0"
lazy_static = "1.4"
