[package]
name = "emacs-parquet-explorer-ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "parquet_to_csv"
path = "src/bin/parquet_to_csv.rs"

[[bin]]
name = "parquet_filter"
path = "src/bin/parquet_filter.rs"

[dependencies]
emacs-egui-sdk = { path = "../emacs-egui/sdk" }
parquet = { version = "53.0", default-features = false, features = ["arrow", "snap", "flate2"] }
arrow-array = "53"
arrow-schema = "53"
arrow-cast = { version = "53", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = ["glow"] }
bytes = "1.0"
lazy_static = "1.4"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"

# Native-only: the parallel scanner used by the parquet_filter sidecar. Excluded
# from the wasm build (no threads in the WebView sandbox).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1"


